# FIFO

./: .gitignore
FIFO/: CMakeLists.txt
FIFO/DICCLIENT/: CMakeLists.txt  DICCLIENT.cpp  开发文档.docx
FIFO/FIFO_CLIENT/: CMakeLists.txt  FIFO_CLIENT.cpp
FIFO/FIFO_SERVER/: CMakeLists.txt  FIFO_SERVER.cpp
FIFO/PIPE/: pipe.cpp  pipe.h
